feat: removing every sensitive modification by id
